Refactor solution for Advent of Code 2023 Day 10